# NLP-CC0C2

./: .gitignore  README.md  SEEDS_AND_VERSIONS.md  notebook.ipynb  requirements.txt
final/: README.md
final/E1/: langgraph.json  pyproject.toml
final/E1/docs/: informe_e1.md
final/E1/src/: __init__.py  demo.py  graph.py  llm.py  nodes.py  rag.py  state.py
final/E2/: langgraph.json  pyproject.toml
final/E2/docs/: informe_e2.md
final/E2/src/: __init__.py  benchmark.py  demo.py  graph.py  ingest_pdfs.py  llm.py  nodes.py  state.py
parcial/: .coverage  .coveragerc  Makefile  README.md  coverage.json
parcial/docs/: autoría.md  bitacora-sprint-1.md  bitacora-sprint-2.md  bitacora-sprint-3.md  bitacora-sprint-4.md  bitacora-sprint-5.md  cobertura.md  reporte.md  video.md
parcial/src/: attention.py  bench.py  bench_quant.py  eval.py  generate.py  plot.py  plot_memoria.py  plot_quant.py  quant.py  tokenizer.py  train.py  transformer.py
parcial/tests/: conftest.py  test_attention.py  test_bench.py  test_eval.py  test_generate.py  test_quant.py  test_tokenizer.py  test_train.py  test_transformer.py
parcial/tools/: capture_env.py  gen_corpus.sh
pc1/: README.md  notebook.ipynb  pyproject.toml
pc2/: README.md  SEEDS_AND_VERSIONS.md  notebook.ipynb  pc2.md  pyproject.toml  requirements.txt
pc2/data/: nlp_prueba_cc0c2.csv  nlp_prueba_cc0c2.sha256
pc2/scripts/: make_dataset.py
